--- a/Akaunting_3.0.15-Stable/public/css/element.css
+++ b/Akaunting_3.0.15-Stable/public/css/element.css
@@ -15722,5 +15722,10 @@
    {
        border-right: none !important;
    }
+    
+   .footer container
+   {
+	   visibility: hidden;
+   }
 /*--Date Time Picker Finish--*/
 }
