--- a/Akaunting_3.0.15-Stable/public/css/element.css
+++ b/Akaunting_3.0.15-Stable/public/css/element.css
@@ -15723,7 +15723,7 @@
        border-right: none !important;
    }
     
-   .footer container
+   .footer.footer.container
    {
 	   visibility: hidden;
    }
